add origin_stone tools

--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,9 @@ publishing {
 	}
 }
 
+// duplicate solve
+tasks.withType(Copy).all { duplicatesStrategy 'exclude' }
+
 fabricApi {
 	configureDataGeneration()
 }
